--- a/Aula5_mesa_de_trabalho/styles.css
+++ b/Aula5_mesa_de_trabalho/styles.css
@@ -47,15 +47,15 @@ h1 {
 
 .dark{
   background-color: rgb(39, 39, 39);
-};
+}
 
 .dark h1{ 
   background-color: rgb(19, 19, 19);
   color: rgb(170, 170, 170);
   border-color: black;
-};
+}
 
-.dark .item{
+.dark .item {
   background-color: rgb(19, 19, 19);
   border-color: black;
 }
